# GoCompiler

./: README.md
CIp1/: CMakeLists.txt  TS.c  TS.h  abb.c  abb.h  compLexico.c  compLexico.h  compSintactico.c  compSintactico.h  definiciones.h  errores.c  errores.h  main.c
